tests/negative/module_not_found.vit
pull missingmod as missing
pull missingmod2 as missing2

entry main at core/app {
  return 0
}
