tests/negative/module_not_found.expect
error: module not found: missingmod
  --> module_not_found.vit:1:6
    |
  1 | pull missingmod as missing
    |      ^^^^^^^^^^
error: module not found: missingmod2
  --> module_not_found.vit:2:6
    |
  2 | pull missingmod2 as missing2
    |      ^^^^^^^^^^^
